mobile responsive done

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -20,7 +20,7 @@ $theme-colors: (
   // Teal (for water and balance)
   "secondary": #004d40,
   // Deep Green (for forests and sustainability)
-  "success": #28a745 // Leafy Green (for growth and progress),,,,,,,,,,,,,,,,,,,
+  "success": #28a745 // Leafy Green (for growth and progress),,,,,,,,,,,,,,,,,,,,
 );
 
 // ------------------------------------------------------------------------------------------------
@@ -87,7 +87,7 @@ $theme-colors: (
 }
 
 .btn-pulse:hover {
-  background-color: darken(#136e64, 50%);
+  background-color: darken(#ffffff, 50%);
 }
 
 // ----------------------------------------------------------------------------
