--- a/assets/css.main.css
+++ b/assets/css.main.css
@@ -9361,4 +9361,17 @@ textarea.form-control-lg {
   background-color: rgb(127.5, 127.5, 127.5);
 }
 
-/*# sourceMappingURL=main.css.map */
+.hero {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  background: url("../img/HERO.jpg") no-repeat center center/cover;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  color: white;
+}
+
+/*# sourceMappingURL=css.main.css.map */
