--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -16,12 +16,12 @@
 $font-family-sans-serif: "Poppins", sans-serif;
 
 $theme-colors: (
-  "primary": #2a9d8f,
-  // Teal (for water and balance)
-  "secondary": #004d40,
-  // Deep Green (for forests and sustainability)
-  "success": #28a745
-    // Leafy Green (for growth and progress),,,,,,,,,,,,,,,,,,,,,,,,
+  "primary": #ffffff,
+  // white
+  "secondary": #2a9d8f,
+  //teal
+  "tertiary": #000000
+    // black
 );
 
 // ------------------------------------------------------------------------------------------------
