--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9359,4 +9359,80 @@ textarea.form-control-lg {
 
 .btn-pulse:hover {
   background-color: gray;
+}
+
+.team-section {
+  background: white;
+  padding: 0;
+  text-align: center;
+  max-width: 100vw;
+  max-height: 100%;
+  margin: 0;
+}
+
+.team-images img {
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
+  border-radius: 5px;
+}
+
+.impact-section {
+  text-align: center;
+  padding: 50px;
+  max-width: 100vw;
+  margin: auto;
+}
+
+.impact-title {
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  margin-bottom: 40px;
+}
+
+.impact-title::after {
+  content: "";
+  flex: 1;
+  height: 2px;
+  background-color: black;
+  margin-left: 10px;
+}
+
+.impact-item {
+  text-align: left;
+}
+
+.impact-icon {
+  width: 60px;
+  height: 60px;
+  background-color: #ddd;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  font-size: 30px;
+  margin-bottom: 15px;
+}
+
+.impact-icon img {
+  max-width: 100%;
+}
+
+.navbar-toggler {
+  border: none;
+  box-shadow: none !important;
+}
+
+.navbar-toggler-icon {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 1%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+}
+
+.hero {
+  background: url("../img/HERO.jpg") no-repeat center center;
+  background-size: cover;
+  position: relative;
+  width: 100%;
 }/*# sourceMappingURL=main.css.map */
