--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9435,4 +9435,31 @@ textarea.form-control-lg {
   background-size: cover;
   position: relative;
   width: 100%;
+}
+
+.about-section {
+  min-height: 600px;
+  display: flex;
+  align-items: center;
+}
+
+.about-section::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 200 200' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.65' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%' height='100%' filter='url(%23noiseFilter)' opacity='0.05'/%3E%3C/svg%3E");
+  pointer-events: none;
+}
+
+/* Media Query */
+@media (max-width: 767px) {
+  .get-in-touch-section {
+    padding-top: 20px !important; /* Reduce top padding on mobile */
+  }
+}
+.letter-spacing-2 {
+  letter-spacing: 2px;
 }/*# sourceMappingURL=main.css.map */
