--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -99,6 +99,7 @@ $theme-colors: (
   max-height: 100%;
   margin: 0;
 }
+
 .team-images img {
   width: 100%;
   height: 300px;
@@ -112,6 +113,7 @@ $theme-colors: (
   max-width: 100vw;
   margin: auto;
 }
+
 .impact-title {
   font-weight: bold;
   display: flex;
@@ -120,6 +122,7 @@ $theme-colors: (
   gap: 10px;
   margin-bottom: 40px;
 }
+
 .impact-title::after {
   content: "";
   flex: 1;
@@ -127,6 +130,7 @@ $theme-colors: (
   background-color: black;
   margin-left: 10px;
 }
+
 .impact-item {
   text-align: left;
 }
@@ -151,6 +155,7 @@ $theme-colors: (
   border: none;
   box-shadow: none !important;
 }
+
 .navbar-toggler-icon {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 1%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
 }
@@ -160,4 +165,31 @@ $theme-colors: (
   background-size: cover;
   position: relative;
   width: 100%;
+}
+
+.about-section {
+  min-height: 600px;
+  display: flex;
+  align-items: center;
+}
+
+.about-section::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 200 200' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.65' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%' height='100%' filter='url(%23noiseFilter)' opacity='0.05'/%3E%3C/svg%3E");
+  pointer-events: none;
+}
+
+/* Media Query */
+@media (max-width: 767px) {
+  .get-in-touch-section {
+    padding-top: 20px !important; /* Reduce top padding on mobile */
+  }
+}
+.letter-spacing-2 {
+  letter-spacing: 2px;
 }
