changed button pulse color

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -20,8 +20,7 @@ $theme-colors: (
   // white
   "secondary": #2a9d8f,
   //teal
-  "tertiary": #000000
-    // black
+  "tertiary": #000000 // black,,,
 );
 
 // ------------------------------------------------------------------------------------------------
@@ -66,13 +65,13 @@ $theme-colors: (
 // ----------------------------------------------------------------------------
 @keyframes pulse {
   0% {
-    box-shadow: 0 0 0 0 rgba(42, 157, 143, 0.4);
+    box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.4);
   }
   50% {
-    box-shadow: 0 0 10px 10px rgba(42, 157, 143, 0.1);
+    box-shadow: 0 0 10px 10px rgba(255, 255, 255, 0.1);
   }
   100% {
-    box-shadow: 0 0 0 0 rgba(42, 157, 143, 0);
+    box-shadow: 0 0 0 0 rgba(255, 255, 255, 0);
   }
 }
 
